[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/fonts/montreal/Montreal48Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/fonts/montreal/Montreal64Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/fonts/montreal/Montreal32Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Interface/PreviouslyPlayedLevelMenu/PreviouslyPlayedLevelMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.984314, 0.572549, 0.235294, 1 )
border_color = Color( 0.505882, 0.54902, 0.972549, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id=6]

[node name="PreviouslyPlayedLevelMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -270.0
margin_right = 360.0
margin_bottom = 270.0

[node name="Background" type="Panel" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Menu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="Menu/Background/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 524.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 688.0
margin_bottom = 492.0
custom_constants/separation = 32

[node name="LevelNameLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 656.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Level name"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 656.0
margin_bottom = 367.0
custom_constants/margin_right = 32
custom_constants/margin_top = 0
custom_constants/margin_left = 32
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 32.0
margin_right = 624.0
margin_bottom = 256.0
custom_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 592.0
margin_bottom = 40.0

[node name="TimeLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 40.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Best time: "

[node name="TimeValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 592.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "32.33s"

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 592.0
margin_bottom = 112.0

[node name="HealthLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 193.0
margin_bottom = 40.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Best health:"

[node name="HealthValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 540.0
margin_right = 592.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1/3"

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 592.0
margin_bottom = 184.0

[node name="CoinsLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 99.0
margin_bottom = 40.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Coins:"

[node name="CoinsValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 546.0
margin_right = 592.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1/1"

[node name="HBoxContainer4" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 592.0
margin_bottom = 256.0

[node name="ScoreLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 181.0
margin_bottom = 40.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Best score:"

[node name="ScoreValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 513.0
margin_right = 592.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1000"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 688.0
margin_bottom = 492.0
custom_constants/margin_right = 64
custom_constants/margin_left = 64

[node name="ContinueButton" type="ToolButton" parent="Menu/MarginContainer/MarginContainer"]
margin_left = 64.0
margin_top = 392.0
margin_right = 299.0
margin_bottom = 460.0
focus_neighbour_left = NodePath("../BackButton")
focus_neighbour_right = NodePath("../BackButton")
size_flags_horizontal = 0
size_flags_vertical = 8
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 6 )
text = "Continue"

[node name="BackButton" type="ToolButton" parent="Menu/MarginContainer/MarginContainer"]
margin_left = 461.0
margin_top = 392.0
margin_right = 592.0
margin_bottom = 460.0
focus_neighbour_left = NodePath("../ContinueButton")
focus_neighbour_right = NodePath("../ContinueButton")
size_flags_horizontal = 8
size_flags_vertical = 8
custom_colors/font_color_focus = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 6 )
text = "Back"
